...
    "Okay": "Okay",
    "proceed": "Proceed",
    "continue": "Continue",
    "done": "Done",
    "create": "Create",
    "Never": "Never",
    "cancel": "Cancel",
    "Goback": "Go back",
    "Invalidword": "Invalid word",
...
    "add": "Add",
    "sign": "Sign",
    "getStarted": "Get Started",
    "confirmProceed": "Confirm & Send",
    "skip": "Skip",
...
    "send": "Send",
    "status": "Status",
    "back": "Back",
    "receive": "Receive",
    "learnMore": "Learn More",
    "seeFAQs": "See FAQs",
    "confirm": "Confirm",
    "addNote": "Add a Note",
    "setup": "Setup",
...
    "PrivacyPolicy": "Privacy Policy",
    "EditDetails": "Edit Details",
    "next": "Next",
    "needHelp": "Need Help?",
    "edit": "Edit",
...
    "configurationSettingDelaySub": "The changes will be applied automatically after a security delay",
    "collaborativeWallet": "Collaborative Wallet",
    "confirmPassCode": "Confirm Passcode",
    "confirm2FACodeTitle": "Confirm 2FA Code",
    "confirm2FACodeSubtitle": "Confirm the currrent 2FA code from your authenticator app",
...
    "RemainingTime": "Remaining Time",
    "finish": "Finish",
    "backupNow": "Backup Now",
    "for": "For",
    "madeIn": "Made in:",
...
    "feeSats": "Fee Stats",
    "continueSession": "Continue session",
    "startNew": "Start New",
    "View": "View",
    "Notifications": "Notifications",
...
    "welcomeback": "Welcome Back",
    "welcome": "Welcome",
    "welcomeToBitcoinKeeper": "Welcome to Bitcoin Keeper",
    "Passcode": "Passcode",
    "newPasscode": "Enter a new passcode",
...
    "continueOffline": "Continue offline",
    "lockedOutOfApp": " You will be locked out of the app if you forget your passcode and will have to recover it using the Recovery Key.",
    "rememberPasscode": "Remember your passcode",
    "storingDeviceSecure": "Storing the devices securely is an important responsibility. Please ensure their safety and accessibility. Losing them may lead to permanent loss of your bitcoin.",
    "enableBiometric": "Enable Biometric Authentication",
    "fingerprintOrFace": "Use fingerprint or face recognition for quick and secure access.",
    "closeAndReopen": "Please close and reopen the app. If the issue persists please contact support.",
...
    "securityTip": "Security Tip",
    "securityTipDesc": "Recreate the multisig on more coordinators. Receive a small amount and send a part of it. Check the balances are appropriately reflected across all the coordinators after each step.",
    "backupModalTitle": "Set Up Wallet Recovery",
    "backupModalSubTitle": "To ensure you can always recover your wallet, please secure your Recovery Key and enable Assisted Server Backup.",
    "backupModalDesc": "This ensure that your encrypted data is backed up and can be decrypted by your Recovery key"
...
    "xPubCopyToastMsg": "Xpub Copied Successfully",
    "walletSeedWord": "Wallet Seed Words",
    "RecoveryKeyReset": "Recovery Key",
    "walletSeedWordSubTitle": "Use to link external wallets to Keeper",
    "xpubModalSubTitle": "Scan or copy the xPub in another app for generating new addresses and fetching balances",
...
    "feeRate": "Fee Rate",
    "homeWallets": "Wallets",
    "keys": "Keys",
    "concierge": "Concierge",
    "more": "More",
...
    "RKHealthCheckSubtitle": "For the Recovery Phrase",
    "RKHealthCheckDesc": "Please Back up your Recovery Key in order to change your current Passcode",
    "RKBackupTitle": "Backup Recovery Key",
    "RKBackupSubTitle": "Carefully write down the 12-word Recovery Key in a private place and ensure its security",
    "passcodeHCModalTitle": "Recovery Key Health Check During Passcode Reset",
...
    "slide01Paragraph": "Create wallets to match your needs. Send and receive Bitcoin. Label and organize your coins",
    "slide02Paragraph": "Use the built-in mobile key or add your own keys. Fully compatible with all popular hardware wallets. ",
    "slide03Title": "Plan for Inheritance",
    "slide03Paragraph": "Set up your wallets for inheritance and seamless recovery with Enhanced Vaults. Use in-app templates for estate planning and guiding your heirs."
  },
...
  },
  "BackupWallet": {
    "confirmSeedWord": "Confirm Backup",
    "enterSeedWord": "Enter the second(02) word",
    "seedWordNote": "If you don’t have the words written down, you may choose to start over.",
...
    "enterThe": "Enter the",
    "seedWord": "seed word",
    "enterSeedWordPlaceholder": "Enter seed word",
    "verifyModalTitle": "Verifying Server Backup",
    "verifyModalSubTitle": "Verifying your server backup integrity against your local data.\nThis may take a moment.",
...
